
* Release 4.0.0
	* Fixed Bug #16: Move test totals to bottom

01/24/2021 Release 3.1.0
	* Fixed Bug #15: shouldBeIn and shouldNotBeIn fail with non string types

01/23/2021 Release 3.0.0
	* Fixed Bug #9: Move shouldThrow message parameter before function parameter
	* Fixed Bug #2: Should print stack traces too
	* Fixed Bug #7: shouldThrow should show the expected message on failure
	* Fixed Bug #6: Add functions that run before and after tests
	* Fixed Bug #5: Add shouldNotBeIn function

04/05/2020 Release 2.0.0
	* Fixed Bug #4: Made tests run without main for changes in dmd 2.090
	* Fixed Bug #1: Change more imports to be local and selective