@@ -1,5 +1,6 @@
 
 * Release 4.0.0
+	* Fixed Bug #18: Error messages should escape non display characters
 	* Fixed Bug #16: Move test totals to bottom
 
 01/24/2021 Release 3.1.0
